Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-138700

Tabs have wrong shape on macOS 26

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • None
    • 6.9, 6.10
    • Widgets: Styles
    • None
    • macOS
    • 9579d27e2 (dev), d0ac3aa7d (6.10), 604b94231 (6.9), 4173e8884 (tqtc/lts-6.8), fa60573d8 (tqtc/lts-6.5)

      This must be related to QTBUG-138699 (we IIRC are using the same native control in qmacstyle to produce this rendering). A screenshot is attached (note tab buttons on the left and right - the are square now).
      Another problem to notice - NSBox is visible through tab buttons.

       

        1. image-2025-08-05-16-58-33-865.png
          191 kB
          Tor Arne Vestbø
        2. Screenshot 2025-07-29 at 14.05.35.png
          87 kB
          Timur Pocheptsov
        3. singletab_macos15.png
          16 kB
          Timur Pocheptsov
        4. singletab_macos26.png
          8 kB
          Timur Pocheptsov
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            tpochep Timur Pocheptsov
            tpochep Timur Pocheptsov
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes