QMacStyle: fix tab widget rendering

0. NSBox (renders tab widget's contents area):
 - does not need geometry adjustments we were applying in 'light'
   theme for macOS version >= macOS Mojave (otherwise, tab
   widget looks shifted vertically in the light appearance). Also, the
   previous workaround for semi-transparent buttons on top of a NSBox
   frame is now needed in both the dark (as before) and light theme (so
   that NSBox is clipped and not visible through buttons).
 - NSBox in the 'Dark' appearance now needs a larger radius
   for its rounded corners, to make it consistent with non-custom
   NSBox (the one we use when in the 'Light' appearance).

1. Fix tab shape rects, so that buttons we are using to render tabs
   are not clipped. This also implies larger default height 23 instead
   of 21 which was working before (otherwise NSButton/NSPopUpButton
   gets its rounded ends partially clipped). Tabs are also larger
   now in width, since button bezel fits into the rect we draw with (width-wise)
   and previously it was smaller (see how rect was adjusted for push button e.g.).

Pick-to: 6.8 6.5
Task-number: QTBUG-138700
Change-Id: If1611845f38976924a3b802173847d1496916e3c
Reviewed-by: Richard Moe Gustavsen <richard.gustavsen@qt.io>
(cherry picked from commit 9579d27e2dc7c398dfbb21324ab2fdcfc94b61bb)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit d0ac3aa7dd44a2fe6667b67509f61799a555a9ae)